--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -7,6 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Dashboard - Distributor</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -61,12 +62,11 @@
                                 </div>
                                 {% endif %}
                                 <p class="text-center">
-                                    <b>Welcome !<br> {{ user_name }}</b><br>
+                                    <b>{{ user_name }}</b><br>
                                     {% if role == 'Distributor' %}
                                         <span class="green-dot"></span>
                                     {% endif %}
                                 </p> 
-                            <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="{{ url_for('distributor.distributor_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
@@ -79,10 +79,10 @@
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
-                                        All Kitchens
+                                        List
                                     </a>
                                     <a class="nav-link collapsed" href="{{ url_for('kitchen.create_kitchen') }}">
-                                        Add Kitchen
+                                        Add
                                     </a>
                                 </nav>
                             </div>
@@ -110,7 +110,6 @@
 <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 <script>
     // Connect to the Socket.IO server
     const socket = io.connect(window.location.origin);
