--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -116,12 +116,11 @@
                                 </div>
                                 {% endif %}
                                 <p class="text-center">
-                                    <b>Welcome !<br> {{ user_name }}</b><br>
+                                    <b>{{ user_name }}</b><br>
                                     {% if role == 'Kitchen' %}
                                         <span class="green-dot"></span>
                                     {% endif %}
                                 </p> 
-                            <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="{{ url_for('kitchen.kitchen_dashboard')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
