--- a/templates/manager/managers.html
+++ b/templates/manager/managers.html
@@ -6,7 +6,7 @@
 
 <div id="layoutSidenav_content">
     <main>
-        <div class="container-fluid px-4">
+        <div class="container-fluid px-4 mt-3">
             <h2 class="text-center">Managers List</h2>
 
             <!-- Display flash messages for success or error -->
@@ -86,12 +86,16 @@
                                     </p>
 
                                     <!-- Action Buttons -->
+                                    {% if manager.status == 'deactivated' %}
+                                 
+                                    {% else %}
                                     <div class="action-buttons">
                                         <a href="{{ url_for('manager.edit_manager', manager_id=manager.id) }}" class="btn btn-warning btn-sm">
                                             <i class="fas fa-edit"></i> Edit</a>
                                         <a href="{{ url_for('manager.delete_manager', manager_id=manager.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this manager?')">
                                             <i class="fas fa-trash-alt"></i> Delete</a>
                                     </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
