--- a/templates/admin/signup.html
+++ b/templates/admin/signup.html
@@ -7,9 +7,25 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Sign Up</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="static/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    </head>
+        <style>
+            .custom-select {
+                appearance: none; /* Removes the default browser style */
+                -webkit-appearance: none; /* Safari/Chrome */
+                -moz-appearance: none; /* Firefox */
+                background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="gray"><path d="M10 12l-4-4h8l-4 4z"/></svg>') no-repeat right 10px center;
+                background-size: 1.5em; /* Increased size for the arrow */
+                padding-right: 2.5em; /* Space for the larger arrow */
+                font-size: 18px; /* Optional: Adjust font size for dropdown text */
+                height: 50px; /* Optional: Increase dropdown height */
+                line-height: 50px; /* Align text vertically */
+            }
+
+        </style>
+        </head>
     
     <body class="bg-info">
         <div id="layoutAuthentication">
@@ -20,11 +36,23 @@
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Sign Up</h3></div>
+                                    {% with messages = get_flashed_messages(with_categories=true) %}
+                                        {% if messages %}
+                                            {% for category, message in messages %}
+                                            <div class="alert alert-{{ category }} alert-dismissible fade show p-2 small m-2" role="alert">
+                                                {{ message }}
+                                                <button type="button"  class="close  p-1" data-dismiss="alert" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            {% endfor %}
+                                        {% endif %}
+                                    {% endwith %}
                                     <div class="card-body">
                                         <form action="{{ url_for('admin_bp.signup') }}" method="POST">
                                             <div  class="form-floating mb-3">
                                                 
-                                                <select id="role" name="role" class="form-control">
+                                                <select id="role" name="role" class="form-control custom-select">
                                                     <option value="Select">Select Role</option>
                                                     <option value="Admin">Admin</option>
                                                     <option value="Manager">Manager</option>
@@ -53,15 +81,6 @@
                                                 <input name="confirmPassword" class="form-control" id="inputPassword" type="password" placeholder="Password" />
                                                 <label for="inputPassword">Confirm Password</label>
                                             </div>
-                                            {% with messages = get_flashed_messages() %}
-                                                {% if messages %}
-                                                    <div class="messages">
-                                                        {% for message in messages %}
-                                                            <p>{{ message }}</p>
-                                                        {% endfor %}
-                                                    </div>
-                                                {% endif %}
-                                            {% endwith %}
                                             
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 
@@ -79,23 +98,6 @@
             </div>
             <br>
         <br>
-            <div id="layoutAuthentication_footer">
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Open Future Technologies 2024</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-            </div>
-        </div>
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="static/js/scripts.js"></script>
+        {% include 'sd_footer.html' %}
     </body>
 </html>
