--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -18,13 +18,14 @@
             box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
         }
 
-        .card {
+        .cards {
             position: relative;
             display: flex;
+            justify-content: center;
             flex-direction: column;
             min-width: 0;
             word-wrap: break-word;
-            background-color: #d0d7d8;
+            background-color: #f7f3f3;
             background-clip: border-box;
             border: 0 solid rgba(0,0,0,.125);
             border-radius: .23rem;
@@ -50,7 +51,7 @@
         }
 
         .bg-gray-300 {
-            background-color: #e2e8f0;
+            background-color: #e7e7e7;
         }
         .h-100 {
             height: 100%!important;
@@ -63,102 +64,97 @@
 </head>
 <div id="layoutSidenav_content">
     <main>
+        <!-- Apply full-width and centering styles -->
+        <div class="d-flex justify-content-center align-items-center" style="min-height: 80vh; width: 100%;">
+          <div class="cards p-4" style="max-width: 900px; width: 100%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    <div class="">
-        <div class="container-fluid px-4">
-            <div class="container">
-                <div class="main-body">
-                <!-- /Breadcrumb -->
-                    <div class="row gutters-sm">
-                        <div class="col-md-4 mb-3">
-                          <div class="card">
-                            <div class="card-body">
-                              <div class="d-flex flex-column align-items-center text-center">
-                                <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 127px; height: 127px;">
-                                <div class="mt-3">
-                                  <h4>{{ user.name }}</h4>
-                                  <p class="text-secondary mb-1">{{ role }}</p>
-                                  {% if user.address %}
-                                    <p class="text-muted font-size-sm">{{ user.address }}</p>
-                                  {% endif %}
-                                  <!-- <button class="btn btn-primary">Follow</button>
-                                  <button class="btn btn-outline-primary">Message</button> -->
-                                </div>
+          {% if messages %}
+                  {% for category, message in messages %}
+                      <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                          {{ message }}
+                          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
+                  {% endfor %}
+              {% endif %}
+          {% endwith %}
+              <div class="main-body">
+                  <div class="row gutters-sm">
+                      <div class="col-md-4 mb-3">
+                        <div class="card ">
+                          <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                              <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 127px; height: 127px;">
+                              <div class="mt-3">
+                                <h4>{{ user.name }}</h4>
+                                <p class="text-secondary mb-1">{{ role }}</p>
+                                {% if user.address %}
+                                  <p class="text-muted font-size-sm">{{ user.address }}</p>
+                                {% endif %}
                               </div>
                             </div>
                           </div>
                         </div>
-                        <div class="col-md-5">
-                          <div class="card mb-3">
-                            <div class="card-body">
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  {% if role == 'Kitchen' %}
-                                    <h6 class="mb-0">Kitchen Name</h6>
-                                  {% else %}
-                                    <h6 class="mb-0">Full Name</h6>
-                                  {% endif %}
-                                </div>
-                                <div class="col-sm-9 text-primary">
-                                    {{ user.name }}
-                                </div>
+                      </div>
+                      <div class="col-md-5">
+                        <div class="card mb-3">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col-sm-3">
+                                {% if role == 'Kitchen' %}
+                                  <h6 class="mb-0">Kitchen Name</h6>
+                                {% else %}
+                                  <h6 class="mb-0">Full Name</h6>
+                                {% endif %}
                               </div>
-                              <hr>
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <h6 class="mb-0">Email</h6>
-                                </div>
-                                <div class="col-sm-9 text-primary">
-                                  {{ user.email }}
-                                </div>
+                              <div class="col-sm-9 text-primary">
+                                  {{ user.name }}
                               </div>
-                              <hr>
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <h6 class="mb-0">Mobile</h6>
-                                </div>
-                                <div class="col-sm-9 text-primary">
-                                    {{ user.contact }}
-                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                              <div class="col-sm-3">
+                                <h6 class="mb-0">Email</h6>
                               </div>
-                              <hr>
-                              {% if user.address %}
-                              <div class="row">
-                                <div class="col-sm-3">
-                                  <h6 class="mb-0">Address</h6>
-                                </div>
-                                <div class="col-sm-9 text-primary">
-                                  {{ user.address }}
-                                </div>
+                              <div class="col-sm-9 text-primary">
+                                {{ user.email }}
                               </div>
-                              <hr>
-                              {% endif %}
-                              <div class="row">
-                                <div class="col-sm-12" style="text-align: right;">
-                                  <a class="btn btn-warning" href="{{ url_for('admin_bp.edit_profile') }}">
-                                    <i class="fas fa-edit"></i> Edit</a>
-                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                              <div class="col-sm-3">
+                                <h6 class="mb-0">Mobile</h6>
+                              </div>
+                              <div class="col-sm-9 text-primary">
+                                  {{ user.contact }}
+                              </div>
+                            </div>
+                            <hr>
+                            {% if user.address %}
+                            <div class="row">
+                              <div class="col-sm-3">
+                                <h6 class="mb-0">Address</h6>
+                              </div>
+                              <div class="col-sm-9 text-primary">
+                                {{ user.address }}
+                              </div>
+                            </div>
+                            <hr>
+                            {% endif %}
+                            <div class="row">
+                              <div class="col-sm-12" style="text-align: right;">
+                                <a class="btn btn-sm btn-warning" href="{{ url_for('admin_bp.edit_profile') }}">
+                                  <i class="fas fa-edit"></i> Edit</a>
                               </div>
                             </div>
                           </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-
-{% include 'admin/admin_footer.html' %}
-
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </main>
+  {% include 'admin/admin_footer.html' %}
+</div>
