--- a/templates/distributor/d_all_distributor.html
+++ b/templates/distributor/d_all_distributor.html
@@ -8,7 +8,7 @@
 
 <div id="layoutSidenav_content">
     <main>
-        <div class="container-fluid px-4">
+        <div class="container-fluid px-4 mt-3">
             <h2 class="text-center">Distributors List</h2>
 
         <!-- Display flash messages for success or error -->
@@ -78,12 +78,16 @@
                                     </span>
                                 </p>
                                 <!-- Action Buttons -->
+                                {% if distributor.status == 'deactivated' %}
+                                 
+                                {% else %}
                                 <div class="action-buttons">
                                     <a href="{{ url_for('distributor.edit_distributor', distributor_id=distributor.id ) }}" class="btn btn-warning btn-sm">
                                         <i class="fas fa-edit"></i> Edit</a>
-                                    <a href="{{ url_for('distributor.delete_distributor', distributor_id=distributor.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this manager?')">
+                                    <a href="{{ url_for('distributor.delete_distributor', distributor_id=distributor.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Distributor?')">
                                         <i class="fas fa-trash-alt"></i> Delete</a>
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
