--- a/templates/kitchen/add_kitchen.html
+++ b/templates/kitchen/add_kitchen.html
@@ -8,19 +8,23 @@
     {% include 'distributor/d_header.html'%}
 {% endif %}
 <div id="layoutSidenav_content">
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <p>{{ message }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-    {% endwith %}
+    <br>
     <main>
         <!-- Add Doctor Form Content Here -->
         <div class="sd-container">
             <h2 class="sd-form">Add Kitchen</h2>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
             <form action="{{ url_for('kitchen.create_kitchen') }}" method="post" class="sd-form">
                 <div class="sd-row">
                     <input name="name" type="text" placeholder="Full Name*" required>
@@ -44,15 +48,6 @@
                 </div>
                 <textarea name="address" class="sd-textarea" placeholder="Address"></textarea>
                 <br>
-                <!-- <div class="sd-row"> -->
-                    <!-- <input type="text" placeholder="Designation"> -->
-                    <!-- <select required>
-                        <option value="" disabled selected>Select Department*</option>
-                        <option value="cardiology">Cardiology</option>
-                        <option value="neurology">Neurology</option>
-                         Add more options as needed -->
-                    <!-- </select> --> 
-                <!-- </div> -->
                 <div class="sd-row">
                     <input name="city" type="text" placeholder="City*" required>
                     <input name="district" type="text" placeholder="District*" required>
