--- a/templates/manager/add_manager.html
+++ b/templates/manager/add_manager.html
@@ -1,20 +1,25 @@
 {% if role == 'Admin' %}
     {% include 'admin/admin_header.html' %}
 {% endif %}
+
 <div id="layoutSidenav_content">
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                    <p>{{ message }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-    {% endwith %}
+    <br>
     <main>
         <!-- Add Doctor Form Content Here -->
         <div class="sd-container">
             <h2 class="sd-form">Add Manager</h2>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
             <form action="{{ url_for('manager.add_manager') }}" method="post" class="sd-form" enctype="multipart/form-data">
                 <div class="sd-row">
                     <input name="name" type="text" placeholder="Full Name*" required>
@@ -32,24 +37,7 @@
                     <label for="image">Profile Image</label>
                     <input type="file" class="form-control-file" id="image" name="image">
                 </div>
-                <!-- <div class="sd-row">
-                    <input type="text" placeholder="Designation">
-                    <select required>
-                        <option value="" disabled selected>Select Department*</option>
-                        <option value="cardiology">Cardiology</option>
-                        <option value="neurology">Neurology</option> -->
-                        <!-- Add more options as needed -->
-                    <!-- </select>
-                </div> -->
-                <!-- <textarea class="sd-textarea" placeholder="Address"></textarea> -->
-                <!-- <div class="sd-upload">
-                    <label>Upload</label>
-                    <input type="file">
-                </div> -->
-                <!--<div class="form-group">
-                <label for="super_distributor_id">Super Distributor ID</label>
-                <input type="number" class="form-control" id="super_distributor_id" name="super_distributor_id" placeholder="Enter super distributor ID">
-                </div>-->
+                
                 <br>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Submit</button>
@@ -58,5 +46,6 @@
         </div>
         <!-- End of Add Doctor Form Content -->
     </main>
+    <br>
 
 {% include 'sd_footer.html' %}
